# hyperopt-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py
examples/: quickstart.py
hyperopt/: __init__.py
hyperopt/core/: __init__.py  objective.py  optimizer.py  search_space.py  strategy.py  trial.py
hyperopt/dashboard/: __init__.py  __main__.py  app.py  routes.py
hyperopt/dashboard/static/: index.html
hyperopt/strategies/: __init__.py  bayesian.py  grid_search.py  hyperband.py  random_search.py
hyperopt/tracking/: __init__.py  sqlite_tracker.py  tracker.py
tests/: test_bayesian.py  test_dashboard.py  test_grid_search.py  test_hyperband.py  test_optimizer.py  test_search_space.py  test_trial.py
